# llm_zoomcamp

./: .gitignore  Dockerfile  README.md  pyproject.toml
01-agentic-rag/: rag.ipynb
01-agentic-rag/homework/: homework.ipynb  rag_helper_hw.py
02-vector-search/: vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
02-vector-search/llm-zoomcamp-onnx/: homework.ipynb  pyproject.toml  vector_search.ipynb
04-evaluation/: 01-data-gen.ipynb  02-search-eval.ipynb  homework.ipynb
05-monitoring/: app.py  assistant.py  create_llm_call_records.sql  dashboard.py  db_init.py  db_query.py  db_save.py  evaluation_utils.py  generate_data.py  judge.py
05-monitoring/llm-zoomcamp-hw5/: hw5.py  hw5_query_db.py  pyproject.toml  save_db.py
06-dlt-homework/: hw.ipynb  pyproject.toml  rest_api_pipeline.py
06-dlt-homework/.claude/rules/: dlthub-init-skills-workflow.md
06-dlt-homework/.claude/skills/deploy-minimal-ingestion-pipeline/: SKILL.md
06-dlt-homework/.dlt/: .toolkits
06-dlt-homework/.dlt/state/dev/pipelines/rest_api_logfire/: state.json  trace.pickle
06-dlt-homework/.dlt/state/dev/pipelines/rest_api_logfire/load/loaded/1784626467.0902448/: applied_schema_updates.json  load_package_state.json  schema.json
06-dlt-homework/.dlt/state/dev/pipelines/rest_api_logfire/schemas/: logfire.schema.json
06-dlt-workshop/: filesystem_pipeline.py
