[project]
name = "llm-zoomcamp-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "minsearch>=0.1.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.27.0",
    "tokenizers>=0.23.1",
    "tqdm>=4.66.5",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.21.0",
    "jupyter>=1.1.1",
]
